# SimpleTimer

./: CMakeLists.txt  README.md  README.zh-CN.md
.github/workflows/: cmake_unix.yml  cmake_windows.yml
examples/: CMakeLists.txt  main.cpp  timer_basic.cpp  timer_callable.cpp  timer_one_shot.cpp  timer_pause.cpp  timer_set_interval.cpp  timer_task_error.cpp
include/: CMakeLists.txt
include/simple_timer/: simple_timer.h
tests/: CMakeLists.txt  test_timer.cpp
